--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="A modern frontend framework using Vite and React. A mental health website"
     />
     <link rel="stylesheet" href="./src/output.css" />
-    <title>Vite + React</title>
+    <title>mental health is you mental wealth</title>
   </head>
   <body>
     <div id="root"></div>
